Add Windows build support and pnpm-lock.yaml

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,6 +35,10 @@ jobs:
             args: ''
             arch: 'aarch64'
 
+          - platform: 'windows-latest'
+            args: ''
+            arch: 'x64'
+
     runs-on: ${{ matrix.platform }}
     steps:
       - name: Checkout repository
