--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -55,11 +55,19 @@ jobs:
           java-version: '17'
           distribution: 'temurin'
 
-      - name: Setup Android SDK (Android build)
+      - name: Install Android SDK (Android build)
         if: matrix.arch == 'android'
-        uses: browser-actions/setup-android@v1
-        with:
-          api-level: 34
+        run: |
+          wget -q https://dl.google.com/android/repository/commandlinetools-linux-11076708_latest.zip -O /tmp/cmdline-tools.zip
+          unzip -q /tmp/cmdline-tools.zip -d /opt/android-sdk
+          mkdir -p /opt/android-sdk/cmdline-tools/latest
+          mv /opt/android-sdk/cmdline-tools/bin /opt/android-sdk/cmdline-tools/latest/
+          mv /opt/android-sdk/cmdline-tools/lib /opt/android-sdk/cmdline-tools/latest/
+          echo "ANDROID_HOME=/opt/android-sdk" >> $GITHUB_ENV
+          echo "ANDROID_SDK_ROOT=/opt/android-sdk" >> $GITHUB_ENV
+          echo "/opt/android-sdk/cmdline-tools/latest/bin" >> $GITHUB_PATH
+          yes | /opt/android-sdk/cmdline-tools/latest/bin/sdkmanager --licenses > /dev/null 2>&1
+          /opt/android-sdk/cmdline-tools/latest/bin/sdkmanager "platforms;android-34" "build-tools;34.0.0" "ndk;25.2.9519653" > /dev/null 2>&1
 
       - name: Add Android target (Android build)
         if: matrix.arch == 'android'
