--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -19,7 +19,7 @@ tauri-build = { version = "2.3", features = [] }
 prost-build = "0.12"
 
 [dependencies]
-tauri = { version = "2.3", features = ["android-all", "macos-private-api"] }
+tauri = { version = "2.3", features = ["macos-private-api"] }
 tauri-plugin-opener = "2.3"
 tauri-plugin-updater = "2.3"
 window-vibrancy = "0.7.1"
