Fix: Add NDK toolchain to PATH for Android build

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -164,6 +164,14 @@ jobs:
           yes | /opt/android-sdk/cmdline-tools/latest/bin/sdkmanager --licenses > /dev/null 2>&1
           /opt/android-sdk/cmdline-tools/latest/bin/sdkmanager "platforms;android-34" "build-tools;34.0.0" "ndk;25.2.9519653" > /dev/null 2>&1
 
+      - name: Setup Android NDK toolchain
+        run: |
+          NDK_PATH="/opt/android-sdk/ndk/25.2.9519653"
+          echo "NDK_PATH=$NDK_PATH" >> $GITHUB_ENV
+          echo "$NDK_PATH/toolchains/llvm/prebuilt/linux-x86_64/bin" >> $GITHUB_PATH
+          echo "$NDK_PATH/toolchains/aarch64-linux-android-4.9/prebuilt/linux-x86_64/bin" >> $GITHUB_PATH
+          ls -la "$NDK_PATH/toolchains/aarch64-linux-android-4.9/prebuilt/linux-x86_64/bin/" | head -10
+
       - name: Add Android target
         run: rustup target add aarch64-linux-android
 
@@ -193,6 +201,10 @@ jobs:
       - name: Build Android APK
         run: npx tauri android build
         working-directory: ./src-tauri
+        env:
+          CC_aarch64_linux_android: aarch64-linux-android21-clang
+          AR_aarch64_linux_android: aarch64-linux-android-ar
+          RANLIB_aarch64_linux_android: aarch64-linux-android-ranlib
 
       - name: Upload APK
         uses: actions/upload-artifact@v4
