fix: Add cargo config for Android NDK toolchain
- Create .cargo/config.toml with Android NDK ar/ranlib paths
- Update .gitignore to track src-tauri/.cargo/ directory
- Fixes aarch64-linux-android-ar not found error in Android builds

--- a/.gitignore
+++ b/.gitignore
@@ -9,10 +9,10 @@ out
 # Rust
 target/
 **/*.rs.bk
-Cargo.lock
-.cargo/
 src-tauri/gen/android/
 src-tauri/keys/private.key
+!src-tauri/.cargo/
+!src-tauri/.cargo/config.toml
 next-env.d.ts
 
 # macOS
